tests/paczka1/small_fuzzy/76591702.err
Error in line 3: BxgP1 A3}} 23,4
Error in line 1: BxgP1 A949 30,9
Error in line 4: S393 S393 84,8
Error in line 6: S393 A355 50,0
